@@ -10,6 +10,9 @@ What's New in Python 3.4.0 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #5845: Enable tab-completion in the interactive interpreter by
+  default, thanks to a new sys.__interactivehook__.
+
 - Issue #17115,17116: Module initialization now includes setting __package__ and
   __loader__ attributes to None.
 
@@ -63,8 +66,8 @@ Core and Builtins
 Library
 -------
 
- - Issue #15902: Fix imp.load_module() accepting None as a file when loading an
-   extension module.
+- Issue #15902: Fix imp.load_module() accepting None as a file when loading an
+  extension module.
 
 - Issue #13721: SSLSocket.getpeercert() and SSLSocket.do_handshake() now
   raise an OSError with ENOTCONN, instead of an AttributeError, when the
@@ -5000,6 +5003,9 @@ Library
 
 - Issue #11635: Don't use polling in worker threads and processes launched by
   concurrent.futures.
+
+- Issue #5845: Automatically read readline configuration to enable completion
+  in interactive mode.
 
 - Issue #6811: Allow importlib to change a code object's co_filename attribute
   to match the path to where the source code currently is, not where the code
